# SnowyBot

./: .gitignore  README.MD  inspect_db.py  pyproject.toml  requirements.txt  snowy_core.py  snowy_listener.py  snowy_reminder.py  user-config.py
.github/workflows/: python-app.yml
legal_cleanup/: autstlii_cases.py
