[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "snowybot"
version = "1.0.0"
description = "A reminder bot for Wikipedia"
requires-python = ">=3.9"
dependencies = [
    "pywikibot>=11.2.0",
    "python-dotenv>=1.2.1",
    "mwoauth>=0.3.7",
    "mwparserfromhell>=0.7.2",
    "requests>=2.32.5",
]

[tool.setuptools]
py-modules = [
    "snowy_reminder",
    "snowy_listener",
    "snowy_core",
    "inspect_db",
]
packages = [
    "legal_cleanup",
]